# lattice_interface

./: .gitignore  AGENTS.md  README.md  TEST_QUALITY.md  conftest.py  justfile  lattice_wrapper_capability_checklist.md  method_ground_truth_tracker.csv  prompt.md  pyproject.toml  pytest.ini  quad_forms_methods_from_docs_list.txt  sagemath_lattice_reference.md  telemetry-id
agent_runner/: README.md  justfile  pyproject.toml  telemetry-id  usage.json
agent_runner/logs/agent_management/claude/20260219_144003/: metadata.json  summary.txt
agent_runner/logs/agent_management/claude/20260219_154003/: metadata.json
agent_runner/logs/agent_management/claude/20260219_164002/: metadata.json
agent_runner/logs/agent_management/claude/20260219_174003/: metadata.json
agent_runner/logs/agent_management/claude/20260219_184003/: metadata.json
agent_runner/logs/agent_management/claude/20260219_194003/: metadata.json  summary.txt
agent_runner/logs/agent_management/claude/20260219_204003/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/claude/20260218_180839/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/claude/20260218_181131/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/claude/20260218_181927/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/claude/20260218_194828/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/claude/20260218_202953/: metadata.json
agent_runner/logs/debug_hello_simple/claude/20260218_203420/: metadata.json
agent_runner/logs/debug_hello_simple/claude/20260219_023409/: metadata.json
agent_runner/logs/debug_hello_simple/claude/20260219_025151/: metadata.json
agent_runner/logs/debug_hello_simple/claude/20260219_030040/: metadata.json
agent_runner/logs/debug_hello_simple/claude/20260219_030419/: metadata.json
agent_runner/logs/debug_hello_simple/claude/20260219_030925/: metadata.json
agent_runner/logs/debug_hello_simple/claude/20260219_041928/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/claude/20260219_182158/: metadata.json
agent_runner/logs/debug_hello_simple/codex/20260218_180738/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/codex/20260218_181022/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/codex/20260218_181351/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/codex/20260218_181827/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/codex/20260218_182112/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/codex/20260219_040157/: metadata.json
agent_runner/logs/debug_hello_simple/codex/20260219_041634/: metadata.json
agent_runner/logs/debug_hello_simple/codex/20260219_042209/: metadata.json
agent_runner/logs/debug_hello_simple/gemini/20260218_180752/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/gemini/20260218_181033/: metadata.json
agent_runner/logs/debug_hello_simple/gemini/20260218_181404/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/gemini/20260218_181843/: metadata.json
agent_runner/logs/debug_hello_simple/gemini/20260219_042115/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/kilo/20260219_041820/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/kilo/20260219_175043/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/kilo/20260219_212816/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/ollama/20260218_180813/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/ollama/20260218_181111/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/ollama/20260218_181909/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/ollama/20260218_194921/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/ollama/20260218_203106/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260218_203529/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260218_232534/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260218_233527/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260219_001632/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/ollama/20260219_031006/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260219_031807/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260219_032016/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260219_032311/: metadata.json
agent_runner/logs/debug_hello_simple/ollama/20260219_041535/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/opencode/20260219_041853/: metadata.json  summary.txt
agent_runner/logs/debug_hello_simple/qwen/20260219_182522/: metadata.json  (+1 more)
agent_runner/prompts/debug/: commit_smoke.md  hello_simple.md  hello_world.md  ping.md  smoke.md
agent_runner/scripts/: claude_usage.py
agent_runner/src/agent_runner/: agent_errors.py  agents.py  config.py  errors.py  git.py  logging.py  notifications.py  notifications_cli.py  orchestrator.py  tasks.py  transcript.py
agent_runner/stubs/plumbum/: __init__.pyi
agent_runner/stubs/python_ntfy/: __init__.pyi
agent_runner/stubs/typer/: __init__.pyi
agent_runner/tests/: test_agents_direct.py  test_cli.py  test_cli_match.py  test_env_preflight.py  test_git.py  test_integration_agents.py  test_integration_codex.py  test_transcript.py
agent_runner/tests/claude/: test_direct.py  test_pipeline.py
agent_runner/tests/codex/: test_direct.py  test_pipeline.py
agent_runner/tests/gemini/: test_direct.py  test_pipeline.py
agent_runner/tests/kilo/: test_direct.py
agent_runner/tests/ollama/: test_direct.py  test_pipeline.py
agent_runner/tests/opencode/: test_direct.py
agent_runner/tests/qwen/: test_direct.py
(+640 files in other folders)
