[project]
name = "agent-runner"
version = "0.1.0"
description = "Centralized agent runner and logging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-ntfy>=0.3.1",
  "typer>=0.12",
  "GitPython>=3.1",
  "structlog>=24.1",
  "plumbum>=1.8",
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "pyright>=1.1.350",
  "pytest>=8.0",
  "pytest-timeout>=2.2"
]


[project.scripts]
agent-runner = "agent_runner.orchestrator:main"
agent-runner-notify = "agent_runner.notifications_cli:main"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
