[project]
name = "agent-runner"
version = "0.1.0"
description = "Centralized agent runner and logging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-ntfy>=0.3.1",
  "typer>=0.12",
  "GitPython>=3.1",
  "structlog>=24.1",
  "plumbum>=1.8",
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "pyright>=1.1.350",
  "pytest>=8.0",
  "pytest-timeout>=2.2",
  "ruff>=0.4"
]


[project.scripts]
agent-runner = "agent_runner.orchestrator:main"
agent-runner-notify = "agent_runner.notifications_cli:main"

[tool.uv]
package = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
stubPath = "stubs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # docstrings not enforced
  "ANN",    # type annotations enforced by pyright, not ruff
  "COM812", # trailing comma conflicts with black
  "ISC001", # implicit string concat conflicts with black
  "TC",     # pydantic resolves field types via get_type_hints() at runtime; TYPE_CHECKING blocks break model validation
]

[tool.ruff.lint.per-file-ignores]
"**/orchestrator.py" = [
  "B008",    # typer.Option() in defaults is typer's required API pattern
  "FBT001",  # bool CLI parameters are typer's pattern for flag arguments
  "FBT003",  # bool literals in typer.Option() are typer's required pattern
  "PLR0913", # notification helpers accumulate parameters by necessity; refactoring adds no clarity
]
"**/notifications_cli.py" = [
  "B008",   # typer.Option() in defaults is typer's required API pattern
  "FBT001", # bool CLI parameters are typer's pattern for flag arguments
  "FBT003", # bool literals in typer.Option() are typer's required pattern
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
