[project]
name = "agent-runner"
version = "0.1.0"
description = "Centralized agent runner and logging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-ntfy>=0.3.1",
  "typer>=0.12",
  "GitPython>=3.1",
  "structlog>=24.1",
  "plumbum>=1.8",
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "pyright>=1.1.350",
  "pytest>=8.0",
  "pytest-timeout>=2.2",
  "ruff>=0.4"
]


[project.scripts]
agent-runner = "agent_runner.orchestrator:main"
agent-runner-notify = "agent_runner.notifications_cli:main"

[tool.uv]
package = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
stubPath = "stubs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # docstrings not enforced
  "ANN",    # type annotations enforced by pyright, not ruff
  "COM812", # trailing comma conflicts with black
  "ISC001", # implicit string concat conflicts with black
  "TC",     # pydantic resolves field types via get_type_hints() at runtime; TYPE_CHECKING blocks break model validation
  "S101",   # assert detected; intentional for invariants and type narrowing
  "S603",   # subprocess call; we control agent binary paths
  "C901",   # too complex; complexity metrics don't catch bugs
  "PLR0911", # too many returns; style metric
  "PLR0912", # too many branches; style metric
  "PLR0913", # too many arguments; style metric
  "PLR0915", # too many statements; style metric
  "PLR2004", # magic value; style metric
  "FIX002", # TODO comments; intentional tracking
  "TD002",  # TODO author; not required
  "TD003",  # TODO issue link; not required
  "TRY300", # else block suggestion; style
  "TRY301", # abstract raise; style
  "BLE001", # blind exception; top-level handlers catch all
  "I001",   # import sorting; ruff format handles
  "SIM108", # ternary operator; style
  "FURB171", # single-item membership; style
  "PERF401", # list comprehension; style
  "G003",   # logging +; style
  "UP017",  # datetime.UTC alias; style
  "PLR5501", # elif; style
  "B028",   # stacklevel; intentional without
  "E501",   # line length; style
]

[tool.ruff.lint.per-file-ignores]
"**/orchestrator.py" = [
  "B008",    # typer.Option() in defaults is typer's required API pattern
  "FBT001",  # bool CLI parameters are typer's pattern for flag arguments
  "FBT003",  # bool literals in typer.Option() are typer's required pattern
]
"**/notifications_cli.py" = [
  "B008",   # typer.Option() in defaults is typer's required API pattern
  "FBT001", # bool CLI parameters are typer's pattern for flag arguments
  "FBT003", # bool literals in typer.Option() are typer's required pattern
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
